reports/notebooks/salaries_gender_countries.err.log
Traceback (most recent call last):
  File "/opt/homebrew/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/opt/homebrew/lib/python3.10/site-packages/nbclient/client.py", line 1265, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/opt/homebrew/lib/python3.10/site-packages/jupyter_core/utils/__init__.py", line 166, in wrapped
    return loop.run_until_complete(inner)
  File "/opt/homebrew/Cellar/python@3.10/3.10.6_1/Frameworks/Python.framework/Versions/3.10/lib/python3.10/asyncio/base_events.py", line 646, in run_until_complete
    return future.result()
  File "/opt/homebrew/lib/python3.10/site-packages/nbclient/client.py", line 703, in async_execute
    await self.async_execute_cell(
  File "/opt/homebrew/lib/python3.10/site-packages/nbclient/client.py", line 1021, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/opt/homebrew/lib/python3.10/site-packages/nbclient/client.py", line 915, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
%run set_theme.ipynb
------------------

Traceback [0;36m(most recent call last)[0m:

[0m  File [1;32m/opt/homebrew/lib/python3.10/site-packages/IPython/core/interactiveshell.py:3433[0m in [1;35mrun_code[0m
    exec(code_obj, self.user_global_ns, self.user_ns)[0m

[0m  Cell [1;32mIn[1], line 1[0m
    get_ipython().run_line_magic('run', 'set_theme.ipynb')[0m

[0m  File [1;32m/opt/homebrew/lib/python3.10/site-packages/IPython/core/interactiveshell.py:2364[0m in [1;35mrun_line_magic[0m
    result = fn(*args, **kwargs)[0m

[0m  File [1;32m/opt/homebrew/lib/python3.10/site-packages/IPython/core/magics/execution.py:717[0m in [1;35mrun[0m
    self.shell.safe_execfile_ipy(filename, raise_exceptions=True)[0m

[0m  File [1;32m/opt/homebrew/lib/python3.10/site-packages/IPython/core/interactiveshell.py:2870[0m in [1;35msafe_execfile_ipy[0m
    result.raise_error()[0m

[0m  File [1;32m/opt/homebrew/lib/python3.10/site-packages/IPython/core/interactiveshell.py:264[0m in [1;35mraise_error[0m
    raise self.error_before_exec[0m

[0m  File [1;32m/opt/homebrew/lib/python3.10/site-packages/IPython/core/interactiveshell.py:3167[0m in [1;35mrun_cell_async[0m
    code_ast = compiler.ast_parse(cell, filename=cell_name)[0m

[0;36m  File [0;32m/opt/homebrew/lib/python3.10/site-packages/IPython/core/compilerop.py:86[0;36m in [0;35mast_parse[0;36m
[0;31m    return compile(source, filename, symbol, self.flags | PyCF_ONLY_AST, 1)[0;36m

[0;36m  File [0;32m/var/folders/mn/tnbfxbt96x95kmz1qgzthgqc0000gn/T/ipykernel_98653/2977157358.py:47[0;36m[0m
[0;31m    cyan,     blue,     pink,   red,     green,     orange[0m
[0m                                                    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax. Perhaps you forgot a comma?

SyntaxError: invalid syntax. Perhaps you forgot a comma? (2977157358.py, line 47)

